--- a/.github/workflows/OpenWrt-合集版.yml
+++ b/.github/workflows/OpenWrt-合集版.yml
@@ -3,7 +3,7 @@ name:  OpenWrt-合集版
 on: 
   workflow_dispatch:
   schedule:
-    - cron: 20 00 * * *
+    - cron: 20 00 * * 1
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
