--- a/.github/workflows/OpenWrt-合集版.yml
+++ b/.github/workflows/OpenWrt-合集版.yml
@@ -116,13 +116,22 @@ jobs:
         sed -i 's/# CONFIG_PACKAGE_luci-app-firewall is not set/CONFIG_PACKAGE_luci-app-firewall=y/' openwrt/.config
         cd openwrt && make defconfig
         
-    - name: 精简编译配置
+    - name: 智能精简配置
       run: |
         cd openwrt
         ./scripts/diffconfig.sh > current.config
-        # 自动禁用体积排名前10的包
-        awk '/CONFIG_PACKAGE/ {print $1}' current.config | xargs -n1 | sort | uniq | \
-        xargs -I{} sh -c 'echo "Disabling {}"; sed -i "s/{}.*=y/# {} is not set/" .config'
+        
+        # 新版处理逻辑
+        awk '/^CONFIG_PACKAGE/ && !/#/ {gsub(/\//,"\\/"); print $1}' current.config | \
+        sort | uniq | \
+        xargs -I{} sh -c '
+          echo "智能禁用: {}"
+          sed -i "s|^.*{}\(.*\)=y|# \1 is not set|" .config
+        '
+        
+        # 验证修改
+        echo "当前已禁用配置:"
+        grep "^# CONFIG_PACKAGE" .config | head -n 20
         
     - name: 正在编译固件
       id: compile
